# active-speaker-detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: args.py
model/: attentionLayer.py  audioEncoder.py  loss.py  talkNet.py  talkNetModel.py  visualEncoder.py  yoloFace.py
model/faceDetector/: __init__.py
model/faceDetector/s3fd/: __init__.py  box_utils.py
utils/: get_ava_active_speaker_performance.py  helpers.py  inference_utils.py  tools.py  track_utils.py  video_utils.py
